# pydeepxlsx

./: .flake8  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml  release.yml
docs/pydeepxlsx/: index.html
pydeepxlsx/: __init__.py
